[package]
name = "mytunnel-server"
version = "0.1.0"
edition = "2021"
authors = ["MyTunnel Team"]
description = "High-performance QUIC-based tunnel server"
license = "MIT"
rust-version = "1.75"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full", "parking_lot"] }

# QUIC implementation
quinn = "0.11"
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
rustls-pemfile = "2"
rcgen = "0.13"

# Serialization & config
serde = { version = "1", features = ["derive"] }
toml = "0.8"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
metrics = "0.23"
metrics-exporter-prometheus = "0.15"

# Concurrency
dashmap = "6"
crossbeam = "0.8"
parking_lot = "0.12"

# System
nix = { version = "0.29", features = ["net", "socket", "uio", "fs"] }
libc = "0.2"
socket2 = "0.5"

# Crypto
ring = "0.17"

# Utilities
thiserror = "1"
anyhow = "1"
bytes = "1"
once_cell = "1"
num_cpus = "1"

[dev-dependencies]
tokio-test = "0.4"
criterion = "0.5"

[[bench]]
name = "proxy_bench"
harness = false

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
opt-level = 3

[profile.release-with-debug]
inherits = "release"
debug = true
strip = false

